簡単なグラフ表示まで

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
 
     <!--  Main  -->
     <string name="btn1">テスト</string>
+    <!--  MainFragment  -->
+    <string name="chart_heart_beat">ChartHeartBeat</string>
 </resources>
